Refactoriza escritura de prueba de integración del ServicioDePoiIntegrationTest